--- a/NoClippyUnchained.csproj
+++ b/NoClippyUnchained.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <Version>0.5.0.17</Version>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0-windows</TargetFramework>
         <PlatformTarget>x64</PlatformTarget>
         <Platforms>x64;AnyCPU</Platforms>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
